fix: text blocks centering on mobile devices

--- a/styles/index.css
+++ b/styles/index.css
@@ -24,9 +24,15 @@ main {
 }
 
 section.text-block {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
     justify-self: center;
-    width: 60%;
+    & h2 {
+        max-width: 60%;
+    }
     & p {
+        width: 60%;
         text-align: justify;
     }
 }
@@ -116,7 +122,12 @@ section.text-block {
 
 @media screen and (max-width: 1000px) {
     section.text-block {
-        width: 80%;
+        & h2 {
+            max-width: 80%;
+        }
+        & p {
+            width: 80%;
+        }
     }
 }
 
